--- a/setup.cfg
+++ b/setup.cfg
@@ -1,15 +1,14 @@
 [metadata]
-# replace with your username:
-name = keypress
+name = ebx_keypress
 version = 1.1.0
 author = Fausto Branco
 author_email = fausto.branco@gmail.com
 description = Capture Keypress
 long_description = file: README.md
 long_description_content_type = text/markdown
-url = https://github.com/faustobranco/keypress
+url = https://github.com/faustobranco/ebx_keypress
 project_urls =
-    Bug Tracker = https://github.com/faustobranco/keypress/issues
+    Bug Tracker = https://github.com/faustobranco/ebx_keypress/issues
 classifiers =
     Programming Language :: Python :: 3
     License :: OSI Approved :: MIT License
